--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
     <header>
             <h1>The Story of the Chinese Farmer</h1>
 
+            <h2>Is it a good thing? Is that a bad thing? I don't know.</h2>
+
             <p class="Date_and_author">11 may 2016, Alexandre Gorius</p> 
             
     </header>
+
+    <p>In nature, Good & Evil do not exist. The Universe itself is neither good nor bad, but a potential in permanent development.</p>
 
     <img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="Man spraying with a hose">
 
