--- a/index.html
+++ b/index.html
@@ -20,7 +20,25 @@
 
     <p>In nature, Good & Evil do not exist. The Universe itself is neither good nor bad, but a potential in permanent development.</p>
 
-    <img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="Man spraying with a hose">
+    <h2>In life, there are 4 types of people</h2>
+
+        <ul>
+            <li>people who think the Internet is good,</li>
+            <li>people who think the Internet is evil,</li>
+            <li>people who think the Internet is cats,</li>
+            <li>people who don't think about it.</li>
+        </ul>
+
+    <figure>
+        <img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="Man spraying with a hose">
+        <figcaption>Man spraying with a hose</figcaption>
+    </figure>
+
+    <p>Up in space, turning around, looking at the earth’s face. From that rock’s perspective on Mars or that gaz opinion from Jupiter, nothing cares about your problems. Up there, it’s just not serious, and there’s no such thing as an issue.</p>
+
+    <p>Down here, the only reality is the one inside our brain. Nothing exists if the brain doesn’t think it. Nothing exists neither if our senses don’t transmit the message. That means that if we mis sense, our reality changes. That’s possible because our perception is limited : you can’t see at 360 degrees for example. If we mis translate the message, our reality changes. If we think it in a way, our reality changes depending on that way. Therefore, if we can change reality that much, everything’s fake.</p>
+
+    <p>They’re proofs to that. Fall in love with someone and you’ll see that person as divine. Pull yourself out of that grip and the divine falls from clouds to solid ground, revealing him or herself differently. But the person is the same, you just changed your mind. Everything works like that : it’s not just that you can make your world, it’s that you passively do it anyway.</p>
 
     <h2>Preamble</h2>
 
