--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <header>
             <h1>The Story of the Chinese Farmer</h1>
 
-            <h2>Is it a good thing? Is that a bad thing? I don't know.</h2>
+            <h2>Is it a <span class="good">good</span> thing? Is that a <span class="bad">bad </span>thing? I don't know.</h2>
 
             <p class="Date_and_author">11 may 2016, Alexandre Gorius</p> 
             
     </header>
 
-    <p>In nature, Good & Evil do not exist. The Universe itself is neither good nor bad, but a potential in permanent development.</p>
+    <p>In nature, <span class="good">Good</span> & Evil do not exist. The Universe itself is neither <span class="good">good</span> nor <span class="bad">bad</span>, but a potential in permanent development.</p>
 
     <h2>In life, there are 4 types of people</h2>
 
         <ul>
-            <li>people who think the Internet is good,</li>
+            <li>people who think the Internet is <span class="good">good</span>,</li>
             <li>people who think the Internet is evil,</li>
             <li>people who think the Internet is cats,</li>
             <li>people who don't think about it.</li>
@@ -40,6 +40,20 @@
 
     <p>They’re proofs to that. Fall in love with someone and you’ll see that person as divine. Pull yourself out of that grip and the divine falls from clouds to solid ground, revealing him or herself differently. But the person is the same, you just changed your mind. Everything works like that : it’s not just that you can make your world, it’s that you passively do it anyway.</p>
 
+
+    <figure>
+        <img src="http://static2.businessinsider.com/image/52fe8230eab8ea4275063b89/nasa-has-determined-where-the-mysterious-jelly-doughnut-rock-on-mars-came-from.jpg" alt="Mysterious rock on Mars">
+        <figcaption>What does he think about it?</figcaption>
+    </figure>
+
+    <h2>The story</h2>
+
+    <figure>
+        <img src="https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg " alt="Old Chinese farmer">
+        <figcaption>The Old Chinese Farmer</figcaption>
+    </figure>
+
+
     <h2>Preamble</h2>
 
     <ul>
@@ -55,10 +69,10 @@
 
     <p>Once upon a time there was a Chinese farmer whose horse ran away. That evening, all of his neighbors came around to commiserate. They said, “We are so sorry to hear your horse has run away. This is most unfortunate.” The farmer said, <em>"Maybe".</em>The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said, “Oh, isn’t that lucky. What a great turn of events. You now have eight horses!” The farmer again said, <em>“Maybe.”</em> </p>
 
-    <p>The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg. The neighbors then said, “Oh dear, that’s too bad,” and the farmer responded, <em>“Maybe.”</em> The next day the conscription officers came around to conscript people into the army, and they rejected his son because he had a broken leg. Again all the neighbors came around and said, “Isn’t that great!” Again, he said, <em>“Maybe.”</em></p>
+    <p>The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg. The neighbors then said, “Oh dear, that’s too <span class="bad">bad</span>,” and the farmer responded, <em>“Maybe.”</em> The next day the conscription officers came around to conscript people into the army, and they rejected his son because he had a broken leg. Again all the neighbors came around and said, “Isn’t that great!” Again, he said, <em>“Maybe.”</em></p>
 
     <p>
-       The whole process of nature is an integrated process of immense complexity, and it’s really impossible to tell whether anything that happens in it is good or bad — because you never know what will be the consequence of the misfortune; or, you never know what will be the consequences of good fortune.</p>
+       The whole process of nature is an integrated process of immense complexity, and it’s really impossible to tell whether anything that happens in it is <span class="good">good</span> or <span class="bad">bad</span> — because you never know what will be the consequence of the misfortune; or, you never know what will be the consequences of <span class="good">good</span> fortune.</p>
 
        Alan Watts
 
@@ -75,7 +89,7 @@
         <tbody>
             <tr>
                 <td>Event</td>
-                <td>Good or Bad ?</td>
+                <td><span class="good">Good</span> or <span class="bad">Bad</span> ?</td>
             </tr>
             <tr>
                 <td>Lose a horse</td>
@@ -99,12 +113,12 @@
 
     <h2>Conclusion</h2>
 
-        <p>Good and Bad are just one perspective. Bananas are good for monkeys, but monkeys are not good for bananas. Let's not make a big deal out of it...
+        <p><span class="good">Good</span> and <span class="bad">Bad</span> are just one perspective. Bananas are <span class="good">good</span> for monkeys, but monkeys are not <span class="good">good</span> for bananas. Let's not make a big deal out of it...
         </p>
 
     <h2>Links</h2>
 
-    <a href="https://wellsbaum.blog/alan-watts-story-of-the-chinese-farmer/ ">Analysis of the parable</a>
+    <a href="https://wellsbaum.blog/alan-watts-story-of-the-chinese-farmer/ " target="_blank">Analysis of the parable</a>
 
     <br>
 
