--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
     <header>
             <h1>The Story of the Chinese Farmer</h1>
 
-            <h2>Is it a <span class="good">good</span> thing? Is that a <span class="bad">bad </span>thing? I don't know.</h2>
-
-            <p class="Date_and_author">11 may 2016, Alexandre Gorius</p> 
+            <blockquote>
+            <p>Is it a <span class="good">good</span> thing? Is that a <span class="bad">bad </span>thing? I don't know.
+            11 may 2016, Alexandre Gorius</p> 
+            </blockquote>
             
     </header>
-
+    
+    <blockquote>
     <p>In nature, <span class="good">Good</span> & Evil do not exist. The Universe itself is neither <span class="good">good</span> nor <span class="bad">bad</span>, but a potential in permanent development.</p>
+    </blockquote>
 
     <h2>In life, there are 4 types of people</h2>
 
