--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     <h2>In life, there are 4 types of people</h2>
 
-        <ul>
-            <li>people who think the Internet is <span class="good">good</span>,</li>
+        <ul class="ul1">
+            <li class="li1">people who think the Internet is <span class="good">good</span>,</li>
             <li>people who think the Internet is evil,</li>
             <li>people who think the Internet is cats,</li>
             <li>people who don't think about it.</li>
