--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     <h2>In life, there are 4 types of people</h2>
 
         <ul class="ul1">
-            <li class="li_good">people who think the Internet is <span class="good">good</span>,</li>
-            <li class="li_evil">people who think the Internet is evil,</li>
-            <li class="li_cats">people who think the Internet is cats,</li>
+            <li class="li_good"><img class="bien" src="bien.png" alt="good">people who think the Internet is <span class="good">good</span>,</li>
+            <li class="li_evil"><img class="mal" src="mal.png" alt="evil">people who think the Internet is evil,</li>
+            <li class="li_cats"><img class="chat" src="chat.png" alt="cats">people who think the Internet is cats,</li>
             <li>people who don't think about it.</li>
         </ul>
 
     <figure>
-        <img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="Man spraying with a hose">
-        <figcaption>Man spraying with a hose</figcaption>
+        <img class="img1"  src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="Man spraying with a hose">
+        <figcaption class="figcaption1">Man spraying with a hose</figcaption>
     </figure>
 
     <p>Up in space, turning around, looking at the earth’s face. From that rock’s perspective on Mars or that gaz opinion from Jupiter, nothing cares about your problems. Up there, it’s just not serious, and there’s no such thing as an issue.</p>
@@ -45,13 +45,13 @@
     <p>They’re proofs to that. Fall in love with someone and you’ll see that person as divine. Pull yourself out of that grip and the divine falls from clouds to solid ground, revealing him or herself differently. But the person is the same, you just changed your mind. Everything works like that : it’s not just that you can make your world, it’s that you passively do it anyway.</p>
 
 
+
     <figure>
         <img src="http://static2.businessinsider.com/image/52fe8230eab8ea4275063b89/nasa-has-determined-where-the-mysterious-jelly-doughnut-rock-on-mars-came-from.jpg" alt="Mysterious rock on Mars">
         <figcaption>What does he think about it?</figcaption>
     </figure>
 
-    <h2>The story</h2>
-
+    
     <figure>
         <img src="https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg " alt="Old Chinese farmer">
         <figcaption>The Old Chinese Farmer</figcaption>
@@ -75,8 +75,8 @@
 
     <p>The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg. The neighbors then said, <q>Oh dear, that’s too <span class="bad">bad</span>,</q> and the farmer responded, <em><q>Maybe.</q></em> The next day the conscription officers came around to conscript people into the army, and they rejected his son because he had a broken leg. Again all the neighbors came around and said, <q>Isn’t that great!</q> Again, he said, <em><q>Maybe.</q></em></p>
 
-    <p>
-       The whole process of nature is an integrated process of immense complexity, and it’s really impossible to tell whether anything that happens in it is <span class="good">good</span> or <span class="bad">bad</span> — because you never know what will be the consequence of the misfortune; or, you never know what will be the consequences of <span class="good">good</span> fortune.</p>
+    
+       <p></p>The whole process of nature is an integrated process of immense complexity, and it’s really impossible to tell whether anything that happens in it is <span class="good">good</span> or <span class="bad">bad</span> — because you never know what will be the consequence of the misfortune; or, you never know what will be the consequences of <span class="good">good</span> fortune.</p>
 
        <p>Alan Watts</p>
 
